--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.23.0",
+    "axios": "^0.26.1",
     "element-plus": "^1.1.0-beta.24",
     "vue": "^3.2.16",
     "vue-router": "4",
@@ -17,9 +17,36 @@
     "@vitejs/plugin-vue": "^1.9.3",
     "sass": "^1.43.3",
     "typescript": "^4.4.3",
+    "unplugin-auto-import": "^0.7.0",
+    "unplugin-element-plus": "^0.3.4",
+    "unplugin-vue-components": "^0.19.2",
     "vite": "^2.6.4",
-    "vite-plugin-components": "^0.13.3",
-    "vite-plugin-style-import": "^1.2.1",
+    "vite-plugin-optimize-persist": "^0.1.2",
+    "vite-plugin-package-config": "^0.1.1",
     "vue-tsc": "^0.3.0"
+  },
+  "vite": {
+    "optimizeDeps": {
+      "include": [
+        "axios",
+        "element-plus",
+        "element-plus/es",
+        "element-plus/es/components/aside/style/css",
+        "element-plus/es/components/button/style/css",
+        "element-plus/es/components/col/style/css",
+        "element-plus/es/components/container/style/css",
+        "element-plus/es/components/form-item/style/css",
+        "element-plus/es/components/form/style/css",
+        "element-plus/es/components/header/style/css",
+        "element-plus/es/components/input/style/css",
+        "element-plus/es/components/main/style/css",
+        "element-plus/es/components/menu-item/style/css",
+        "element-plus/es/components/menu/style/css",
+        "element-plus/es/components/row/style/css",
+        "element-plus/es/components/sub-menu/style/css",
+        "vue",
+        "vue-router"
+      ]
+    }
   }
 }
