--- a/package.json
+++ b/package.json
@@ -46,13 +46,16 @@
         "element-plus/es/components/message-box/style/css",
         "element-plus/es/components/option/style/css",
         "element-plus/es/components/pagination/style/css",
+        "element-plus/es/components/radio-group/style/css",
+        "element-plus/es/components/radio/style/css",
         "element-plus/es/components/row/style/css",
         "element-plus/es/components/select/style/css",
         "element-plus/es/components/sub-menu/style/css",
         "element-plus/es/components/table-column/style/css",
         "element-plus/es/components/table/style/css",
         "vue",
-        "vue-router"
+        "vue-router",
+        "vuex"
       ]
     }
   }
