--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,17 @@
     "moduleResolution": "node",
     "strict": true,
     "jsx": "preserve",
+    "suppressImplicitAnyIndexErrors":true,
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "auto-imports.d.ts"]
+  "include": [
+    "src/**/*.ts", 
+    "src/**/*.d.ts", 
+    "src/**/*.tsx", 
+    "src/**/*.vue", 
+    "auto-imports.d.ts"
+  ]
 }
