--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "element-plus": "^1.1.0-beta.24",
+    "moment": "^2.29.3",
     "vue": "^3.2.16",
     "vue-router": "4",
     "vuex": "^4.0.2"
@@ -40,10 +41,12 @@
         "element-plus/es/components/form/style/css",
         "element-plus/es/components/header/style/css",
         "element-plus/es/components/input/style/css",
+        "element-plus/es/components/loading/style/css",
         "element-plus/es/components/main/style/css",
         "element-plus/es/components/menu-item/style/css",
         "element-plus/es/components/menu/style/css",
         "element-plus/es/components/message-box/style/css",
+        "element-plus/es/components/message/style/css",
         "element-plus/es/components/option/style/css",
         "element-plus/es/components/pagination/style/css",
         "element-plus/es/components/radio-group/style/css",
@@ -53,6 +56,7 @@
         "element-plus/es/components/sub-menu/style/css",
         "element-plus/es/components/table-column/style/css",
         "element-plus/es/components/table/style/css",
+        "moment",
         "vue",
         "vue-router",
         "vuex"
