--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "element-plus": "^1.1.0-beta.24",
+    "md-editor-v3": "^2.0.1",
     "moment": "^2.29.3",
     "vue": "^3.2.16",
     "vue-router": "4",
@@ -33,9 +34,13 @@
         "element-plus",
         "element-plus/es",
         "element-plus/es/components/aside/style/css",
+        "element-plus/es/components/avatar/style/css",
         "element-plus/es/components/button/style/css",
+        "element-plus/es/components/checkbox-group/style/css",
+        "element-plus/es/components/checkbox/style/css",
         "element-plus/es/components/col/style/css",
         "element-plus/es/components/container/style/css",
+        "element-plus/es/components/date-picker/style/css",
         "element-plus/es/components/dialog/style/css",
         "element-plus/es/components/form-item/style/css",
         "element-plus/es/components/form/style/css",
@@ -54,8 +59,11 @@
         "element-plus/es/components/row/style/css",
         "element-plus/es/components/select/style/css",
         "element-plus/es/components/sub-menu/style/css",
+        "element-plus/es/components/switch/style/css",
         "element-plus/es/components/table-column/style/css",
         "element-plus/es/components/table/style/css",
+        "element-plus/es/components/time-picker/style/css",
+        "md-editor-v3",
         "moment",
         "vue",
         "vue-router",
