--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^2.3.15",
     "axios": "^0.26.1",
     "element-plus": "^1.1.0-beta.24",
-    "md-editor-v3": "^2.0.1",
     "moment": "^2.29.3",
     "vue": "^3.2.16",
     "vue-router": "4",
@@ -30,6 +30,8 @@
   "vite": {
     "optimizeDeps": {
       "include": [
+        "@kangc/v-md-editor",
+        "@kangc/v-md-editor/lib/theme/vuepress.js",
         "axios",
         "element-plus",
         "element-plus/es",
@@ -63,8 +65,8 @@
         "element-plus/es/components/table-column/style/css",
         "element-plus/es/components/table/style/css",
         "element-plus/es/components/time-picker/style/css",
-        "md-editor-v3",
         "moment",
+        "prismjs",
         "vue",
         "vue-router",
         "vuex"
