--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "element-plus/es/components/checkbox-group/style/css",
         "element-plus/es/components/checkbox/style/css",
         "element-plus/es/components/col/style/css",
+        "element-plus/es/components/color-picker/style/css",
         "element-plus/es/components/container/style/css",
         "element-plus/es/components/date-picker/style/css",
         "element-plus/es/components/dialog/style/css",
@@ -48,6 +49,7 @@
         "element-plus/es/components/form/style/css",
         "element-plus/es/components/header/style/css",
         "element-plus/es/components/input/style/css",
+        "element-plus/es/components/link/style/css",
         "element-plus/es/components/loading/style/css",
         "element-plus/es/components/main/style/css",
         "element-plus/es/components/menu-item/style/css",
@@ -64,6 +66,7 @@
         "element-plus/es/components/switch/style/css",
         "element-plus/es/components/table-column/style/css",
         "element-plus/es/components/table/style/css",
+        "element-plus/es/components/tag/style/css",
         "element-plus/es/components/time-picker/style/css",
         "moment",
         "prismjs",
