--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@kangc/v-md-editor": "^2.3.15",
     "axios": "^0.26.1",
+    "crypto-js": "^4.1.1",
     "element-plus": "^1.1.0-beta.24",
     "moment": "^2.29.3",
     "vue": "^3.2.16",
@@ -16,6 +17,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@vitejs/plugin-vue": "^1.9.3",
     "sass": "^1.43.3",
     "typescript": "^4.4.3",
@@ -33,11 +35,14 @@
         "@kangc/v-md-editor",
         "@kangc/v-md-editor/lib/theme/vuepress.js",
         "axios",
+        "crypto-js",
         "element-plus",
         "element-plus/es",
         "element-plus/es/components/aside/style/css",
         "element-plus/es/components/avatar/style/css",
         "element-plus/es/components/button/style/css",
+        "element-plus/es/components/calendar/style/css",
+        "element-plus/es/components/card/style/css",
         "element-plus/es/components/checkbox-group/style/css",
         "element-plus/es/components/checkbox/style/css",
         "element-plus/es/components/col/style/css",
@@ -64,8 +69,10 @@
         "element-plus/es/components/select/style/css",
         "element-plus/es/components/sub-menu/style/css",
         "element-plus/es/components/switch/style/css",
+        "element-plus/es/components/tab-pane/style/css",
         "element-plus/es/components/table-column/style/css",
         "element-plus/es/components/table/style/css",
+        "element-plus/es/components/tabs/style/css",
         "element-plus/es/components/tag/style/css",
         "element-plus/es/components/time-picker/style/css",
         "moment",
