--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "element-plus/es/components/form-item/style/css",
         "element-plus/es/components/form/style/css",
         "element-plus/es/components/header/style/css",
+        "element-plus/es/components/infinite-scroll/style/css",
         "element-plus/es/components/input/style/css",
         "element-plus/es/components/link/style/css",
         "element-plus/es/components/loading/style/css",
